tests/rosetta/out/Smalltalk/call-an-object-method.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| New b box |
New := [ b := Dictionary from:{'Contents'->'rabbit'. 'secret'->1}.
b. ].
box := New value.
(box at: 'TellSecret') value.
